trying to fix jumping animaton...

--- a/css/main.css
+++ b/css/main.css
@@ -55,10 +55,10 @@ div#home {
 
 #d1, #d2, #d3, #d4{
   /* TRANSITION on div with pictures */
-   -webkit-transition: background-image 1s linear;
-   -moz-transition: background-image 1s linear;
-   -o-transition: background-image 1s linear;
-   transition: background-image 1s linear;
+   -webkit-transition: background-image 1s ease-in-out;
+   -moz-transition: background-image 1s ease-in-out;
+   -o-transition: background-image 1s ease-in-out;
+   transition: background-image 1s ease-in-out;
 }
 
 #d1{
